--- a/src/client/components/TokenList.css
+++ b/src/client/components/TokenList.css
@@ -70,7 +70,6 @@
 
 .cards h4 {
   text-align: center;
-  font-size: 0.99rem;
   font-weight: 600;
   color: #FA8100;
   margin: 0;
@@ -99,7 +98,6 @@ p.marginTxt{
   margin-left: 10px;
 }
 .cards a button span{
-font-size: 0.98rem;
 }
 .cards a button:hover {
   background: #69A4F9;
